--- a/manifest.json
+++ b/manifest.json
@@ -3,7 +3,13 @@
   "name": "Freescribe Copilot",
   "version": "1.0",
   "description": "Record and play audio from tab and microphone",
-  "permissions": ["activeTab", "tabCapture", "storage", "sidePanel"],
+  "permissions": [
+    "activeTab",
+    "tabCapture",
+    "storage",
+    "sidePanel",
+    "contextMenus"
+  ],
   "host_permissions": ["<all_urls>"],
   "side_panel": {
     "default_path": "index.html"
