--- a/manifest.json
+++ b/manifest.json
@@ -14,6 +14,7 @@
   "side_panel": {
     "default_path": "index.html"
   },
+  "options_page": "options.html",
   "background": {
     "service_worker": "background.js"
   },
