--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "manifest_version": 3,
-  "name": "Freescribe Copilot",
+  "name": "FreeScribe",
   "version": "1.0",
   "description": "Record and play audio from tab and microphone",
   "permissions": [
@@ -19,6 +19,6 @@
     "service_worker": "background.js"
   },
   "action": {
-    "default_title": "Open Freescribe Copilot"
+    "default_title": "FreeScribe"
   }
 }
