--- a/public/manifest.json
+++ b/public/manifest.json
@@ -10,6 +10,12 @@
     "sidePanel",
     "contextMenus"
   ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
+  },
   "host_permissions": ["<all_urls>"],
   "side_panel": {
     "default_path": "index.html"
@@ -20,5 +26,21 @@
   },
   "action": {
     "default_title": "FreeScribe"
+  },
+  "commands": {
+    "_execute_action": {
+      "suggested_key": {
+        "default": "Alt+Shift+F"
+      },
+      "description": "Open FreeScribe Extension"
+    },
+    "start_stop_recording": {
+      "suggested_key": "Alt+Shift+R",
+      "description": "Start or Stop Recording"
+    },
+    "configure": {
+      "suggested_key": "Alt+Shift+Comma",
+      "description": "Open FreeScribe Configuration"
+    }
   }
 }
